add: welcome letters animations

--- a/productLandingPage/index.html
+++ b/productLandingPage/index.html
@@ -40,44 +40,37 @@
             </ul>
         </div>
 
-
-        <div class="custom-menu-button primary color-main">
-            <label for="nav-controller">
-                <i class="mdi mdi-menu"></i><span class="sr-only">Nav</span>
-            </label>
-            <button tabindex="-1" type="button" id="nav-bar-controller" title="Open navigation drawer"></button>
-            <div class="switch">
-                <div class="background"></div>
-            </div>
+        <div class="custom-menu-button primary color-inverted">
+            <button tabindex="-1" type="button" id="nav-bar-controller" title="Navigation drawer"><i
+                    class="mdi mdi-menu"></i><span class="sr-only">Nav</span></button>
+            <div class="background"></div>
         </div>
 
-        <div id="logo" class="logo"><img id="header-img" src="./img/logo.svg" alt=""></div>
-
-
-        <div class="custom-menu-button primary color-main">
-            <label for="options-controller">
-                <i class="mdi mdi-dots-vertical"></i><span class="sr-only">Options</span>
-            </label>
-
-            <button tabindex="-1" type="button" id="options-controller" title="Open options drawer"></button>
-            <div class="switch">
-                <div class="background"></div>
-            </div>
+        <div id="logo" class="logo"><a href="/" title="Go to main page"><img id="header-img" src="./img/logo.svg"
+                    alt="Logo of the site"></a>
         </div>
 
+
+        <div class="custom-menu-button primary color-inverted">
+            <button tabindex="-1" type="button" id="options-controller" title="Open navigation drawer"><i
+                    class="mdi mdi-dots-vertical"></i><span class="sr-only">Options</span></button>
+            <div class="background"></div>
+        </div>
     </header>
 
     <main id="main">
         <section id="main-welcome" class="row fluid">
             <section id="circles-container">
-                <div id="title-img-container">Rosalía</div>
+                <div id="title-img-container">Billie Eilish</div>
+                <div id="links-container">When We All Fall Asleep, Where Do We Go?</div>
             </section>
             <section class="row primary color-inverted col-xs12 xs-align-center xs-justify-center pa4">
 
                 <div class="register col-xs10 col-sm6 row xs-justify-center xs-text-left">
                     <h2>Ex accusamus tempore culpa placeat?</h2>
-                    <label for="email" class="sr-only">Ex accusamus tempore culpa placeat?</label>
-                    <input type="email" name="email" maxlength="65" minlength="5" placeholder="Your e-mail">
+                    <label for="email-newsletter" class="sr-only">Ex accusamus tempore culpa placeat?</label>
+                    <input type="email" id="email-newsletter" name="email-newsletter" maxlength="65" minlength="5"
+                        placeholder="Your e-mail">
 
                     <div class="input-button mt4">
                         <input type="submit" class="button" id="submit-newsletter" name="submit-newsletter"
@@ -164,16 +157,16 @@
 
                 <div tabindex="0" class="box icon-box pa4">
                     <header>
-                        <figure><img src="./img/rosa (3).jpg" alt=""></figure>
-                        <h2 class="mt4">Reniego</h2>
+                        <figure><img src="./img/cover_when_we_all_fall_asleep_where_do_we_go.png" alt=""></figure>
+                        <h2 class="mt4">When We All Fall Asleep, Where Do We Go?</h2>
                     </header>
                     <div class="x-content">
                         <ul>
                             <li><i class="mdi mdi-home"></i>Item 1</li>
-                            <li><i class="mdi mdi-home"></i>Item 2</li>
-                            <li><i class="mdi mdi-home"></i>Item 3</li>
-                            <li><i class="mdi mdi-home"></i>Item 4</li>
-                            <li><i class="mdi mdi-home"></i>Item 5</li>
+                            <li><i class="mdi mdi-album"></i>Item 2</li>
+                            <li><i class="mdi mdi-briefcase"></i>Item 3</li>
+                            <li><i class="mdi mdi-cart"></i>Item 4</li>
+                            <li><i class="mdi mdi-charity"></i>Item 5</li>
                         </ul>
                     </div>
                     <footer class="x-footer">
@@ -183,16 +176,16 @@
                 </div>
                 <div tabindex="0" class="box icon-box pa4">
                     <header>
-                        <figure><img src="./img/rosa (4).jpg" alt=""></figure>
-                        <h2 class="mt4">Malamente</h2>
+                        <figure><img src="./img/cover_dont_smile_at_me.jpg" alt=""></figure>
+                        <h2 class="mt4">Don't Smile at Me</h2>
                     </header>
                     <div class="x-content">
                         <ul>
                             <li><i class="mdi mdi-home"></i>Item 1</li>
-                            <li><i class="mdi mdi-home"></i>Item 2</li>
-                            <li><i class="mdi mdi-home"></i>Item 3</li>
-                            <li><i class="mdi mdi-home"></i>Item 4</li>
-                            <li><i class="mdi mdi-home"></i>Item 5</li>
+                            <li><i class="mdi mdi-album"></i>Item 2</li>
+                            <li><i class="mdi mdi-briefcase"></i>Item 3</li>
+                            <li><i class="mdi mdi-cart"></i>Item 4</li>
+                            <li><i class="mdi mdi-charity"></i>Item 5</li>
                         </ul>
                     </div>
                     <footer class="x-footer">
@@ -202,16 +195,16 @@
                 </div>
                 <div tabindex="0" class="box icon-box pa4">
                     <header>
-                        <figure><img src="./img/rosa (5).jpg" alt=""></figure>
-                        <h2 class="mt4">De aquí no sales</h2>
+                        <figure><img src="./img/cover_lovely.jpg" alt=""></figure>
+                        <h2 class="mt4">Lovely (with Khalid)</h2>
                     </header>
                     <div class="x-content">
                         <ul>
                             <li><i class="mdi mdi-home"></i>Item 1</li>
-                            <li><i class="mdi mdi-home"></i>Item 2</li>
-                            <li><i class="mdi mdi-home"></i>Item 3</li>
-                            <li><i class="mdi mdi-home"></i>Item 4</li>
-                            <li><i class="mdi mdi-home"></i>Item 5</li>
+                            <li><i class="mdi mdi-album"></i>Item 2</li>
+                            <li><i class="mdi mdi-briefcase"></i>Item 3</li>
+                            <li><i class="mdi mdi-cart"></i>Item 4</li>
+                            <li><i class="mdi mdi-charity"></i>Item 5</li>
                         </ul>
                     </div>
                     <footer class="x-footer">
@@ -221,16 +214,16 @@
                 </div>
                 <div tabindex="0" class="box icon-box pa4">
                     <header>
-                        <figure><img src="./img/rosa (6).jpg" alt=""></figure>
-                        <h2 class="mt4">Que no salga la luna</h2>
+                        <figure><img src="./img/cover_ocean_eyes.png" alt=""></figure>
+                        <h2 class="mt4">Ocean Eyes</h2>
                     </header>
                     <div class="x-content">
                         <ul>
                             <li><i class="mdi mdi-home"></i>Item 1</li>
-                            <li><i class="mdi mdi-home"></i>Item 2</li>
-                            <li><i class="mdi mdi-home"></i>Item 3</li>
-                            <li><i class="mdi mdi-home"></i>Item 4</li>
-                            <li><i class="mdi mdi-home"></i>Item 5</li>
+                            <li><i class="mdi mdi-album"></i>Item 2</li>
+                            <li><i class="mdi mdi-briefcase"></i>Item 3</li>
+                            <li><i class="mdi mdi-cart"></i>Item 4</li>
+                            <li><i class="mdi mdi-charity"></i>Item 5</li>
                         </ul>
                     </div>
                     <footer class="x-footer">
@@ -255,7 +248,7 @@
                                     required aria-required="true">
                             </div>
                             <div class="input mb4">
-                                <label for="email">E-mail</label>
+                                <label for="email">Seu email</label>
                                 <input class="color-inverted" type="email" id="email" name="email" maxlength="65"
                                     required aria-required="true">
                             </div>
@@ -278,8 +271,80 @@
 
     </main>
 
-    <footer id="footer">
+    <footer id="footer" class="row main color-inverted">
+        <div class="col-xs12 col-sm6 col-md4 pa4">
+            <div class="col-xs12 xs-text-center">
+                <img class="logo" src="./img/logo.svg" alt="Logo of the site">
+            </div>
+            <div class="xs-text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, aperiam
+                vero atque dolorum eveniet
+                tempora error, optio ipsam reprehenderit commodi nemo praesentium, quasi quo. Pariatur vitae repellat et
+                a
+                expedita.</div>
+            
 
+        </div>
+        <div class="col-xs12 col-sm6 col-md4 pa4">
+            <h4>Internal links</h4>
+            <ul>
+                <li><a href="#" class="color-inverted" target="_self">Some links here 1</a></li>
+                <li><a href="#" class="color-inverted" target="_self">Some links here 2</a></li>
+                <li><a href="#" class="color-inverted" target="_self">Some links here 3</a></li>
+                <li><a href="#" class="color-inverted" target="_self">Some links here 4</a></li>
+                <li><a href="#" class="color-inverted" target="_self">Some links here 5</a></li>
+            </ul>
+        </div>
+        <div class="col-xs12 col-md4 pa4">
+            <h4>External links</h4>
+            <ul>
+                <li><a href="#" class="color-inverted" target="_blank">Some links here 1</a></li>
+                <li><a href="#" class="color-inverted" target="_blank">Some links here 2</a></li>
+                <li><a href="#" class="color-inverted" target="_blank">Some links here 3</a></li>
+                <li><a href="#" class="color-inverted" target="_blank">Some links here 4</a></li>
+                <li><a href="#" class="color-inverted" target="_blank">Some links here 5</a></li>
+            </ul>
+        </div>
+        <div class="col-xs12 xs-text-center pa4">
+            <h4 class="my4 mt16">Social media list</h4>
+            <div class="row color-main xs-justify-center">
+                <div class="custom-menu-button">
+
+                    <a role="button" class=" color-inverted" href="#" tabindex="0" aria-label="Open facebook page"
+                        title="Open facebook page"><i class="mdi mdi-facebook"></i></a>
+                    <div class="background"></div>
+
+                </div>
+                <div class="custom-menu-button">
+
+                    <a role="button" class=" color-inverted" href="#" tabindex="0" title="Open twitter profile"><i
+                            class="mdi mdi-twitter"></i></a>
+                    <div class="background"></div>
+
+                </div>
+                <div class="custom-menu-button">
+
+                    <a role="button" class=" color-inverted" href="#" tabindex="0" title="Open whatsapp contact"><i
+                            class="mdi mdi-whatsapp"></i></a>
+                    <div class="background"></div>
+
+                </div>
+                <div class="custom-menu-button">
+
+                    <a role="button" class=" color-inverted" href="#" tabindex="0" title="Open pinterest profile"><i
+                            class="mdi mdi-pinterest"></i></a>
+                    <div class="background"></div>
+
+                </div>
+                <div class="custom-menu-button">
+
+                    <a role="button" class=" color-inverted" href="#" tabindex="0" title="Open instagram profile"><i
+                            class="mdi mdi-instagram"></i><span class="sr-only">instagram</span></a>
+                    <div class="background"></div>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-xs12 xs-text-center pa4">&copy; Ítalo Polazzi - 2019</div>
     </footer>
 
     <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
