basic structure to init

--- a/productLandingPage/index.html
+++ b/productLandingPage/index.html
@@ -64,7 +64,8 @@
                 <div id="title-img-container">Billie Eilish</div>
                 <div id="links-container">When We All Fall Asleep, Where Do We Go?</div>
             </section>
-            <section class="row primary color-inverted col-xs12 xs-align-center xs-justify-center pa4">
+            <section
+                class="row primary color-inverted offset-xs1 col-xs10 offset-md3 col-md6 xs-align-center xs-justify-center pa4 mb8">
 
                 <div class="register col-xs10 col-sm6 row xs-justify-center xs-text-left">
                     <h2>Ex accusamus tempore culpa placeat?</h2>
