--- a/surveyForm/index.html
+++ b/surveyForm/index.html
@@ -40,91 +40,107 @@
 
                             <!-- INPUTS -->
                             <div class="form-div" id="form-div-1">
+                                <div class="content">
 
-                                <div class="input">
-                                    <label id="name-label" for="name">Name</label>
-                                    <input type="text" id="name" name="survey-name" placeholder="Name" required>
-                                </div>
-                                <div class="input">
-                                    <label id="email-label" for="email">E-mail</label>
-                                    <input type="email" id="email" name="survey-email" placeholder="E-mail" required>
-                                </div>
-                                <div class="input">
-                                    <label id="number-label" for="number">Number</label>
-                                    <input type="number" id="number" name="survey-number" min="10" max="100"
-                                        placeholder="Number" required>
+                                    <div class="input">
+                                        <label id="name-label" for="name">Name</label>
+                                        <input type="text" id="name" name="survey-name" placeholder="Name" required>
+                                    </div>
+                                    <div class="input">
+                                        <label id="email-label" for="email">E-mail</label>
+                                        <input type="email" id="email" name="survey-email" placeholder="E-mail"
+                                            required>
+                                    </div>
+                                    <div class="input">
+                                        <label id="number-label" for="number">Number</label>
+                                        <input type="number" id="number" name="survey-number" min="10" max="100"
+                                            placeholder="Number" required>
+                                    </div>
                                 </div>
                             </div>
 
                             <!-- SELECT -->
                             <div class="form-div" id="form-div-2">
-                                <fieldset>
-                                    <legend>Some request here?</legend>
-                                    <select name="survey-dropdown" id="dropdown" required>
-                                        <option value="" disabled selected hidden>Choose here</option>
-                                        <optgroup label="Group 1">
-                                            <option value="1">Test 1</option>
-                                            <option value="2">Test 2</option>
-                                            <option value="3">Test 3</option>
-                                            <option value="4">Test 4</option>
-                                            <option value="5">Test 5</option>
-                                        </optgroup>
-                                        <optgroup label="Group 2" disabled>
-                                            <option value="1">Test 1</option>
-                                            <option value="2">Test 2</option>
-                                            <option value="3">Test 3</option>
-                                            <option value="4">Test 4</option>
-                                            <option value="5">Test 5</option>
-                                        </optgroup>
-                                    </select>
-                                </fieldset>
+                                <div class="content">
+                                    <fieldset>
+                                        <legend>Some request here?</legend>
+                                        <select name="survey-dropdown" id="dropdown" required>
+                                            <option value="" disabled selected hidden>Choose here</option>
+                                            <optgroup label="Group 1">
+                                                <option value="1">Test 1</option>
+                                                <option value="2">Test 2</option>
+                                                <option value="3">Test 3</option>
+                                                <option value="4">Test 4</option>
+                                                <option value="5">Test 5</option>
+                                            </optgroup>
+                                            <optgroup label="Group 2" disabled>
+                                                <option value="1">Test 1</option>
+                                                <option value="2">Test 2</option>
+                                                <option value="3">Test 3</option>
+                                                <option value="4">Test 4</option>
+                                                <option value="5">Test 5</option>
+                                            </optgroup>
+                                        </select>
+                                    </fieldset>
+                                </div>
                             </div>
 
                             <!-- RADIOS -->
                             <div class="form-div" id="form-div-3">
+                                <div class="content">
 
-                                <fieldset>
-                                    <legend>Some question here? </legend>
-                                    <label for="radio-1">Radio 1</label>
-                                    <input type="radio" value="radio-1" name="survey-radios" id="radio-1" required>
-                                    <label for="radio-2">Radio 2</label>
-                                    <input type="radio" value="radio-2" name="survey-radios" id="radio-2">
-                                    <label for="radio-3">Radio 3</label>
-                                    <input type="radio" value="radio-3" name="survey-radios" id="radio-3">
-                                    <label for="radio-4">Radio 4</label>
-                                    <input type="radio" value="radio-4" name="survey-radios" id="radio-4">
-                                    <label for="radio-5">Radio 5</label>
-                                    <input type="radio" value="radio-5" name="survey-radios" id="radio-5">
-                                </fieldset>
+                                    <fieldset>
+                                        <legend>Some question here? </legend>
+                                        <label for="radio-1">Radio 1</label>
+                                        <input type="radio" value="radio-1" name="survey-radios" id="radio-1" required>
+                                        <label for="radio-2">Radio 2</label>
+                                        <input type="radio" value="radio-2" name="survey-radios" id="radio-2">
+                                        <label for="radio-3">Radio 3</label>
+                                        <input type="radio" value="radio-3" name="survey-radios" id="radio-3">
+                                        <label for="radio-4">Radio 4</label>
+                                        <input type="radio" value="radio-4" name="survey-radios" id="radio-4">
+                                        <label for="radio-5">Radio 5</label>
+                                        <input type="radio" value="radio-5" name="survey-radios" id="radio-5">
+                                    </fieldset>
+                                </div>
                             </div>
 
                             <!-- CHECKBOXES -->
                             <div class="form-div" id="form-div-4">
+                                <div class="content">
 
-                                <fieldset>
-                                    <legend>Some other question here?</legend>
+                                    <fieldset>
+                                        <legend>Some other question here?</legend>
 
-                                    <label for="checkbox-1">Checkbox 1</label>
-                                    <input type="checkbox" value="checkbox-1" name="survey-checkboxes" id="checkbox-1">
-                                    <label for="checkbox-2">Checkbox 2</label>
-                                    <input type="checkbox" value="checkbox-2" name="survey-checkboxes" id="checkbox-2">
-                                    <label for="checkbox-3">Checkbox 3</label>
-                                    <input type="checkbox" value="checkbox-3" name="survey-checkboxes" id="checkbox-3">
-                                    <label for="checkbox-4">Checkbox 4</label>
-                                    <input type="checkbox" value="checkbox-4" name="survey-checkboxes" id="checkbox-4">
-                                    <label for="checkbox-5">Checkbox 5</label>
-                                    <input type="checkbox" value="checkbox-5" name="survey-checkboxes" id="checkbox-5">
+                                        <label for="checkbox-1">Checkbox 1</label>
+                                        <input type="checkbox" value="checkbox-1" name="survey-checkboxes"
+                                            id="checkbox-1">
+                                        <label for="checkbox-2">Checkbox 2</label>
+                                        <input type="checkbox" value="checkbox-2" name="survey-checkboxes"
+                                            id="checkbox-2">
+                                        <label for="checkbox-3">Checkbox 3</label>
+                                        <input type="checkbox" value="checkbox-3" name="survey-checkboxes"
+                                            id="checkbox-3">
+                                        <label for="checkbox-4">Checkbox 4</label>
+                                        <input type="checkbox" value="checkbox-4" name="survey-checkboxes"
+                                            id="checkbox-4">
+                                        <label for="checkbox-5">Checkbox 5</label>
+                                        <input type="checkbox" value="checkbox-5" name="survey-checkboxes"
+                                            id="checkbox-5">
 
-                                </fieldset>
+                                    </fieldset>
+                                </div>
                             </div>
 
                             <!-- TEXTAREA -->
                             <div class="form-div" id="form-div-5">
+                                <div class="content">
 
-                                <textarea name="survey-comments" id="comments" cols="30" rows="10"></textarea>
+                                    <textarea name="survey-comments" id="comments" cols="30" rows="10"></textarea>
 
-                                <div class="input form-actions">
-                                    <input type="submit" value="Send" name="survey-submit" id="submit">
+                                    <div class="input form-actions">
+                                        <input type="submit" value="Send" name="survey-submit" id="submit">
+                                    </div>
                                 </div>
                             </div>
                         </fieldset>
@@ -133,7 +149,7 @@
 
                     <div class="controls">
                         <fieldset>
-                            <legend class="sr-only">Choose the forms </legend>
+                            <legend class="sr-only">Controls to select form's parts</legend>
                             <label class="sr-only" for="control-1">Form div 1</label>
                             <input type="radio" value="control-1" name="survey-controls" id="control-1" checked>
                             <label class="sr-only" for="control-2">Form div 2</label>
