--- a/surveyForm/index.html
+++ b/surveyForm/index.html
@@ -44,16 +44,16 @@
 
                                     <div class="input">
                                         <label id="name-label" for="name">Name</label>
-                                        <input type="text" id="name" name="survey-name" placeholder="Name" required>
+                                        <input type="text" id="name" name="form-name" placeholder="Name" required>
                                     </div>
                                     <div class="input">
                                         <label id="email-label" for="email">E-mail</label>
-                                        <input type="email" id="email" name="survey-email" placeholder="E-mail"
+                                        <input type="email" id="email" name="form-email" placeholder="E-mail"
                                             required>
                                     </div>
                                     <div class="input">
                                         <label id="number-label" for="number">Number</label>
-                                        <input type="number" id="number" name="survey-number" min="10" max="100"
+                                        <input type="number" id="number" name="form-number" min="10" max="100"
                                             placeholder="Number" required>
                                     </div>
                                 </div>
@@ -64,7 +64,7 @@
                                 <div class="content">
                                     <fieldset>
                                         <legend>Some request here?</legend>
-                                        <select name="survey-dropdown" id="dropdown" required>
+                                        <select name="form-dropdown" id="dropdown" required>
                                             <option value="" disabled selected hidden>Choose here</option>
                                             <optgroup label="Group 1">
                                                 <option value="1">Test 1</option>
@@ -92,15 +92,15 @@
                                     <fieldset>
                                         <legend>Some question here? </legend>
                                         <label for="radio-1">Radio 1</label>
-                                        <input type="radio" value="radio-1" name="survey-radios" id="radio-1" required>
+                                        <input type="radio" value="radio-1" name="form-radios" id="radio-1" required>
                                         <label for="radio-2">Radio 2</label>
-                                        <input type="radio" value="radio-2" name="survey-radios" id="radio-2">
+                                        <input type="radio" value="radio-2" name="form-radios" id="radio-2">
                                         <label for="radio-3">Radio 3</label>
-                                        <input type="radio" value="radio-3" name="survey-radios" id="radio-3">
+                                        <input type="radio" value="radio-3" name="form-radios" id="radio-3">
                                         <label for="radio-4">Radio 4</label>
-                                        <input type="radio" value="radio-4" name="survey-radios" id="radio-4">
+                                        <input type="radio" value="radio-4" name="form-radios" id="radio-4">
                                         <label for="radio-5">Radio 5</label>
-                                        <input type="radio" value="radio-5" name="survey-radios" id="radio-5">
+                                        <input type="radio" value="radio-5" name="form-radios" id="radio-5">
                                     </fieldset>
                                 </div>
                             </div>
@@ -113,19 +113,19 @@
                                         <legend>Some other question here?</legend>
 
                                         <label for="checkbox-1">Checkbox 1</label>
-                                        <input type="checkbox" value="checkbox-1" name="survey-checkboxes"
+                                        <input type="checkbox" value="checkbox-1" name="form-checkboxes"
                                             id="checkbox-1">
                                         <label for="checkbox-2">Checkbox 2</label>
-                                        <input type="checkbox" value="checkbox-2" name="survey-checkboxes"
+                                        <input type="checkbox" value="checkbox-2" name="form-checkboxes"
                                             id="checkbox-2">
                                         <label for="checkbox-3">Checkbox 3</label>
-                                        <input type="checkbox" value="checkbox-3" name="survey-checkboxes"
+                                        <input type="checkbox" value="checkbox-3" name="form-checkboxes"
                                             id="checkbox-3">
                                         <label for="checkbox-4">Checkbox 4</label>
-                                        <input type="checkbox" value="checkbox-4" name="survey-checkboxes"
+                                        <input type="checkbox" value="checkbox-4" name="form-checkboxes"
                                             id="checkbox-4">
                                         <label for="checkbox-5">Checkbox 5</label>
-                                        <input type="checkbox" value="checkbox-5" name="survey-checkboxes"
+                                        <input type="checkbox" value="checkbox-5" name="form-checkboxes"
                                             id="checkbox-5">
 
                                     </fieldset>
@@ -136,10 +136,10 @@
                             <div class="form-div" id="form-div-5">
                                 <div class="content">
 
-                                    <textarea name="survey-comments" id="comments" cols="30" rows="10"></textarea>
+                                    <textarea name="form-comments" id="comments" cols="30" rows="10"></textarea>
 
                                     <div class="input form-actions">
-                                        <input type="submit" value="Send" name="survey-submit" id="submit">
+                                        <input type="submit" value="Send" name="form-submit" id="submit">
                                     </div>
                                 </div>
                             </div>
@@ -151,15 +151,15 @@
                         <fieldset>
                             <legend class="sr-only">Controls to select form's parts</legend>
                             <label class="sr-only" for="control-1">Form div 1</label>
-                            <input type="radio" value="control-1" name="survey-controls" id="control-1" checked>
+                            <input type="radio" value="1" name="form-controls" id="control-1" checked>
                             <label class="sr-only" for="control-2">Form div 2</label>
-                            <input type="radio" value="control-2" name="survey-controls" id="control-2">
+                            <input type="radio" value="2" name="form-controls" id="control-2">
                             <label class="sr-only" for="control-3">Form div 3</label>
-                            <input type="radio" value="control-3" name="survey-controls" id="control-3">
+                            <input type="radio" value="3" name="form-controls" id="control-3">
                             <label class="sr-only" for="control-4">Form div 4</label>
-                            <input type="radio" value="control-4" name="survey-controls" id="control-4">
+                            <input type="radio" value="4" name="form-controls" id="control-4">
                             <label class="sr-only" for="control-5">Form div 5</label>
-                            <input type="radio" value="control-5" name="survey-controls" id="control-5">
+                            <input type="radio" value="5" name="form-controls" id="control-5">
                         </fieldset>
                     </div>
                 </div>
