add: initial argument for activateTheFormCorrespondingToTheChecked

--- a/surveyForm/index.html
+++ b/surveyForm/index.html
@@ -92,15 +92,15 @@
                                     <fieldset>
                                         <legend>Some question here? </legend>
                                         <label for="radio-1">Radio 1</label>
-                                        <input type="radio" value="radio-1" name="form-radios" id="radio-1" required>
+                                        <input type="radio" tabindex="0" value="radio-1" name="form-radios" id="radio-1" required>
                                         <label for="radio-2">Radio 2</label>
-                                        <input type="radio" value="radio-2" name="form-radios" id="radio-2">
+                                        <input type="radio" tabindex="0" value="radio-2" name="form-radios" id="radio-2">
                                         <label for="radio-3">Radio 3</label>
-                                        <input type="radio" value="radio-3" name="form-radios" id="radio-3">
+                                        <input type="radio" tabindex="0" value="radio-3" name="form-radios" id="radio-3">
                                         <label for="radio-4">Radio 4</label>
-                                        <input type="radio" value="radio-4" name="form-radios" id="radio-4">
+                                        <input type="radio" tabindex="0" value="radio-4" name="form-radios" id="radio-4">
                                         <label for="radio-5">Radio 5</label>
-                                        <input type="radio" value="radio-5" name="form-radios" id="radio-5">
+                                        <input type="radio" tabindex="0" value="radio-5" name="form-radios" id="radio-5">
                                     </fieldset>
                                 </div>
                             </div>
@@ -151,15 +151,15 @@
                         <fieldset>
                             <legend class="sr-only">Controls to select form's parts</legend>
                             <label class="sr-only" for="control-1">Form div 1</label>
-                            <input type="radio" value="1" name="form-controls" id="control-1" checked>
+                            <input type="radio" tabindex="0" value="1" name="form-controls" id="control-1" checked>
                             <label class="sr-only" for="control-2">Form div 2</label>
-                            <input type="radio" value="2" name="form-controls" id="control-2">
+                            <input type="radio" tabindex="0" value="2" name="form-controls" id="control-2">
                             <label class="sr-only" for="control-3">Form div 3</label>
-                            <input type="radio" value="3" name="form-controls" id="control-3">
+                            <input type="radio" tabindex="0" value="3" name="form-controls" id="control-3">
                             <label class="sr-only" for="control-4">Form div 4</label>
-                            <input type="radio" value="4" name="form-controls" id="control-4">
+                            <input type="radio" tabindex="0" value="4" name="form-controls" id="control-4">
                             <label class="sr-only" for="control-5">Form div 5</label>
-                            <input type="radio" value="5" name="form-controls" id="control-5">
+                            <input type="radio" tabindex="0" value="5" name="form-controls" id="control-5">
                         </fieldset>
                     </div>
                 </div>
