--- a/surveyForm/index.html
+++ b/surveyForm/index.html
@@ -33,23 +33,24 @@
 
         <section class="row">
             <div class="col-xs12 offset-md6 col-md6 pa4">
+                <!-- <div class="col-xs12 pa4"> -->
                 <div class="custom-form">
-                    <form action="" id="survey-form">
+                    <form action="" id="survey-form" class="primary color-inverted">
                         <fieldset>
                             <legend>The survey form's title</legend>
 
                             <!-- INPUTS -->
-                            <div class="form-div" id="form-div-1">
+                            <div class="form-div secondary color-inverted" id="form-div-1">
                                 <div class="content">
 
                                     <div class="input">
                                         <label id="name-label" for="name">Name</label>
-                                        <input type="text" id="name" name="form-name" placeholder="Name" required>
+                                        <input type="text" id="name" name="form-name" placeholder="Seu nome aqui"
+                                            required>
                                     </div>
                                     <div class="input">
                                         <label id="email-label" for="email">E-mail</label>
-                                        <input type="email" id="email" name="form-email" placeholder="E-mail"
-                                            required>
+                                        <input type="email" id="email" name="form-email" placeholder="E-mail" required>
                                     </div>
                                     <div class="input">
                                         <label id="number-label" for="number">Number</label>
@@ -60,10 +61,11 @@
                             </div>
 
                             <!-- SELECT -->
-                            <div class="form-div" id="form-div-2">
+                            <div class="form-div secondary color-inverted" id="form-div-2">
                                 <div class="content">
-                                    <fieldset>
+                                    <fieldset class="form-box">
                                         <legend>Some request here?</legend>
+
                                         <select name="form-dropdown" id="dropdown" required>
                                             <option value="" disabled selected hidden>Choose here</option>
                                             <optgroup label="Group 1">
@@ -81,35 +83,42 @@
                                                 <option value="5">Test 5</option>
                                             </optgroup>
                                         </select>
+
                                     </fieldset>
                                 </div>
                             </div>
 
                             <!-- RADIOS -->
-                            <div class="form-div" id="form-div-3">
+                            <div class="form-div secondary color-inverted" id="form-div-3">
                                 <div class="content">
 
-                                    <fieldset>
+                                    <fieldset class="form-box">
                                         <legend>Some question here? </legend>
+
                                         <label for="radio-1">Radio 1</label>
-                                        <input type="radio" tabindex="0" value="radio-1" name="form-radios" id="radio-1" required>
+                                        <input type="radio" tabindex="0" value="radio-1" name="form-radios" id="radio-1"
+                                            required>
                                         <label for="radio-2">Radio 2</label>
-                                        <input type="radio" tabindex="0" value="radio-2" name="form-radios" id="radio-2">
+                                        <input type="radio" tabindex="0" value="radio-2" name="form-radios"
+                                            id="radio-2">
                                         <label for="radio-3">Radio 3</label>
-                                        <input type="radio" tabindex="0" value="radio-3" name="form-radios" id="radio-3">
+                                        <input type="radio" tabindex="0" value="radio-3" name="form-radios"
+                                            id="radio-3">
                                         <label for="radio-4">Radio 4</label>
-                                        <input type="radio" tabindex="0" value="radio-4" name="form-radios" id="radio-4">
+                                        <input type="radio" tabindex="0" value="radio-4" name="form-radios"
+                                            id="radio-4">
                                         <label for="radio-5">Radio 5</label>
-                                        <input type="radio" tabindex="0" value="radio-5" name="form-radios" id="radio-5">
+                                        <input type="radio" tabindex="0" value="radio-5" name="form-radios"
+                                            id="radio-5">
                                     </fieldset>
                                 </div>
                             </div>
 
                             <!-- CHECKBOXES -->
-                            <div class="form-div" id="form-div-4">
+                            <div class="form-div secondary color-inverted" id="form-div-4">
                                 <div class="content">
 
-                                    <fieldset>
+                                    <fieldset class="form-box">
                                         <legend>Some other question here?</legend>
 
                                         <label for="checkbox-1">Checkbox 1</label>
@@ -133,11 +142,12 @@
                             </div>
 
                             <!-- TEXTAREA -->
-                            <div class="form-div" id="form-div-5">
+                            <div class="form-div secondary color-inverted" id="form-div-5">
                                 <div class="content">
-
-                                    <textarea name="form-comments" id="comments" cols="30" rows="10"></textarea>
-
+                                    <div class="input">
+                                        <label for="comments">Space for comments</label>
+                                        <textarea name="form-comments" id="comments" cols="30" rows="10"></textarea>
+                                    </div>
                                     <div class="input form-actions">
                                         <input type="submit" value="Send" name="form-submit" id="submit">
                                     </div>
@@ -147,19 +157,24 @@
 
                     </form>
 
-                    <div class="controls">
+                    <div class="controls accent color-inverted">
                         <fieldset>
                             <legend class="sr-only">Controls to select form's parts</legend>
-                            <label class="sr-only" for="control-1">Form div 1</label>
-                            <input type="radio" tabindex="0" value="1" name="form-controls" id="control-1" checked>
-                            <label class="sr-only" for="control-2">Form div 2</label>
-                            <input type="radio" tabindex="0" value="2" name="form-controls" id="control-2">
-                            <label class="sr-only" for="control-3">Form div 3</label>
-                            <input type="radio" tabindex="0" value="3" name="form-controls" id="control-3">
-                            <label class="sr-only" for="control-4">Form div 4</label>
-                            <input type="radio" tabindex="0" value="4" name="form-controls" id="control-4">
-                            <label class="sr-only" for="control-5">Form div 5</label>
-                            <input type="radio" tabindex="0" value="5" name="form-controls" id="control-5">
+                            <label  class="radio-label" for="control-1"><span class="sr-only">Form div 1</span>
+                                <input type="radio" tabindex="0" value="1" name="form-controls" id="control-1" checked>
+                                <div class="symbol"></div></label>
+                            <label  class="radio-label" for="control-2"><span class="sr-only">Form div 2</span>
+                                <input type="radio" tabindex="0" value="2" name="form-controls" id="control-2">
+                                <div class="symbol error"></div></label>
+                            <label  class="radio-label" for="control-3"><span class="sr-only">Form div 3</span>
+                                <input type="radio" tabindex="0" value="3" name="form-controls" id="control-3">
+                                <div class="symbol"></div></label>
+                            <label  class="radio-label" for="control-4"><span class="sr-only">Form div 4</span>
+                                <input type="radio" tabindex="0" value="4" name="form-controls" id="control-4">
+                                <div class="symbol"></div></label>
+                            <label  class="radio-label" for="control-5"><span class="sr-only">Form div 5</span>
+                                <input type="radio" tabindex="0" value="5" name="form-controls" id="control-5">
+                                <div class="symbol"></div></label>
                         </fieldset>
                     </div>
                 </div>
